--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
       );
       if (materialSymbolsarrowBackIo1) {
         materialSymbolsarrowBackIo1.addEventListener("click", function (e) {
-          window.location.href = "/";
+          window.location.href = "/animalwelfare/index.html";
         });
       }
       </script>
