--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
       );
       if (materialSymbolsarrowBackIo) {
         materialSymbolsarrowBackIo.addEventListener("click", function (e) {
-          window.location.href = "/";
+          window.location.href = "/animalwelfare/index.html";
         });
       }
       </script>
