--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <b class="contact2">Contact</b>
       <img class="vector-icon8" alt="" src="./public/vector2.svg" />
 
-      <h6 class="h6">+91 - 6363966573</h6>
+      <h6 class="h6">+91 - XXXXXXXXXX</h6>
       <b class="welcome-towe-save-container">
         <p class="welcome-towe-save">
           WELCOME TOWE SAVE ANIMALS (WSA) WELFARE TRUST
